--- a/app/src/main/res/layout/content_view_results.xml
+++ b/app/src/main/res/layout/content_view_results.xml
@@ -8,4 +8,33 @@
     tools:context="github.ethesx.librarycodereader.ViewResultsActivity"
     tools:showIn="@layout/activity_view_results">
 
+    <TextView
+        android:id="@+id/txtResultsTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
+        android:text="TextView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/txtResultsISBN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtResultsTitle" />
+
+    <Button
+        android:id="@+id/btnResultsMarkTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteY="345dp" />
+
 </android.support.constraint.ConstraintLayout>
