--- a/app/src/main/res/layout/content_view_results.xml
+++ b/app/src/main/res/layout/content_view_results.xml
@@ -134,7 +134,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/txtResultsTitle" />
 
     <TextView
         android:id="@+id/lblAge"
@@ -146,7 +146,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblAuthor" />
+        app:layout_constraintTop_toBottomOf="@+id/txtResultsAuthor" />
 
     <TextView
         android:id="@+id/lblPublisher"
@@ -158,7 +158,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblAge" />
+        app:layout_constraintTop_toBottomOf="@+id/txtResultsAge" />
 
     <TextView
         android:id="@+id/lblISBN"
@@ -172,6 +172,6 @@
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblPublisher" />
+        app:layout_constraintTop_toBottomOf="@+id/txtResultsPublisher" />
 
 </android.support.constraint.ConstraintLayout>
